--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
     tags:
       - "v*.*.*"
+  workflow_dispatch: {} # <-- add this to enable manual runs
 
 jobs:
   build-and-push:
