--- a/services/template_service/package.json
+++ b/services/template_service/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.19.0",
+    "amqplib": "^0.10.9",
     "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
