--- a/services/user_service/Dockerfile
+++ b/services/user_service/Dockerfile
@@ -1,46 +1,22 @@
-FROM javascript:20-alpine AS builder
+FROM node:20-alpine AS builder
 
-# Install git and ca-certificates
-RUN apk update && apk add --no-cache git ca-certificates tzdata && update-ca-certificates
-
-# Create appuser
-RUN adduser -D -g '' appuser
-
-# Set working directory
 WORKDIR /builder
 
-# Copy package files
-COPY package.json package-lock.json ./
+COPY package*.json ./
+RUN npm ci
 
-# Install dependencies
-RUN npm install
-
-# Copy the source code
 COPY . .
-
-# Build the application
 RUN npm run build
 
-# Final stage
-FROM alpine:latest
-
-# Install ca-certificates
-RUN apk update && apk add --no-cache ca-certificates tzdata && update-ca-certificates
-
-# Create appuser
-RUN adduser -D -g '' appuser
-
-# Set working directory
+FROM node:20-alpine
 WORKDIR /app
 
-# Copy the built files from builder stage
-COPY --from=builder /builder/dist /app
-COPY --from=builder /builder/node_modules /app/node_modules
-COPY --from=builder /builder/package.json /app/package.json
-COPY --from=builder /builder/package-lock.json /app/package-lock.json
+ENV NODE_ENV=production
 
-# EXPOSE port
+COPY --from=builder /builder/node_modules ./node_modules
+COPY --from=builder /builder/package*.json ./
+COPY --from=builder /builder/dist ./dist
+
 EXPOSE 3001
 
-# Run the application
-ENTRYPOINT ["node", "index.js"]
+CMD ["node", "dist/main.js"]
