--- a/.github/workflows/template-service.yml
+++ b/.github/workflows/template-service.yml
@@ -2,73 +2,81 @@ name: Template Service CI
 
 on:
   push:
+    branches:
+      - main
     paths:
-      - 'services/template_service/**'
-      - 'shared/**'
-      - 'go.work'
-      - '.github/workflows/template-service.yml'
+      - "services/template_service/**"
+      - ".github/workflows/template-service.yml"
   pull_request:
+    branches:
+      - main
     paths:
-      - 'services/template_service/**'
-      - 'shared/**'
-      - 'go.work'
-      - '.github/workflows/template-service.yml'
-
-permissions:
-  contents: read
-  packages: write
+      - "services/template_service/**"
+      - ".github/workflows/template-service.yml"
 
 jobs:
-  build-test:
+  build-and-test:
     runs-on: ubuntu-latest
+
+    # Set the working directory to the service folder for all steps in this job
     defaults:
       run:
-        working-directory: services/template_service
-    env:
-      REGISTRY: ghcr.io
-      SERVICE_NAME: template-service
-    steps:
-      - uses: actions/checkout@v4
+        working-directory: ./services/template_service
 
-      - name: Setup Node
+    # Define services needed for testing
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: test_db
+        ports:
+          - 5432:5432
+        # Health check to ensure postgres is ready before starting tests
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      redis:
+        image: redis:6
+        ports:
+          - 6379:6379
+        # Health check for Redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      rabbitmq:
+        image: rabbitmq:3-management
+        ports:
+          - 5672:5672
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: "services/template_service/package-lock.json"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      - name: Lint
+      - name: Run Linting
         run: npm run lint
 
-      - name: Run tests
-        run: npm run test -- --runInBand --passWithNoTests
+      - name: Run Tests
+        run: npm run test
+        env:
+          DATABASE_URL: "postgresql://user:password@localhost:5432/test_db?schema=public"
+          REDIS_URL: "redis://localhost:6379"
+          RABBITMQ_URL: "amqp://localhost:5672"
 
-      - name: Build
+      - name: Build application
         run: npm run build
-
-      - name: Set image name
-        run: |
-          OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
-          echo "IMAGE=${REGISTRY}/${OWNER}/${SERVICE_NAME}" >> $GITHUB_ENV
-
-      - name: Login to GHCR
-        if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build image
-        if: github.ref == 'refs/heads/main'
-        run: |
-          docker build -t $IMAGE:${{ github.sha }} -f Dockerfile .
-          docker tag $IMAGE:${{ github.sha }} $IMAGE:latest
-
-      - name: Push image
-        if: github.ref == 'refs/heads/main'
-        run: |
-          docker push $IMAGE:${{ github.sha }}
-          docker push $IMAGE:latest
